Update files HTMLs e config BD PHP
Banco de Dados... Arquivo cofig.php (configuração de login no Banco), reservas-forms.php (captura os dados do formulario e envia para o Banco) e na pasta Script o arquivo SQL do Banco de Dados.
Para que funcione é necessário ir na página em que está o formulário, na tag forms colocar dentro do atributo action="reservas-forms.php"

--- a/styles/section.css
+++ b/styles/section.css
@@ -127,7 +127,7 @@
 
 /**************** PAGE 2 - RESERVAS.HTML*********************/
 .reserva-cad input[type="text"], input[type="datetime-local"], input[type="time"], input[type="number"], input[type="email"],
-   textarea,
+   textarea[id="solicitacoes"],
     label[for="curso"], label[for="depart"], label[for="resp"], label[for="prof"], label[for="reserva-data"], label[for="reserva-hora"], label[for="num-alunos"], label[for="inputOthers"], label[for="email-resp"], label[for="email-resp"], label[for="solicitacoes"] {/* todo input dentro da class receberá o stylo*/
     width: 99%;
     padding: 12px;
