--- a/styles/section.css
+++ b/styles/section.css
@@ -6,13 +6,13 @@
 .container-section {
     background-color: bisque;
     justify-content: center;
-    padding: 2vh 0vw;
+    padding: 3vh 0vw;
     display: grid;
 }
-
+.display-container { margin: 2vw; }
 .div-container {
-    margin-left: 4vw;
-    margin-top: 5vh;
+    margin: 2vh 4vw;
+    /*margin-top: 3vh;*/
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .div-container-auxiliares {
@@ -49,8 +49,8 @@
  /************************ CARROSSEL SECTION ******************/
 .carrossel-container { /*posicionar no meio e adionar texto*/
     position: relative;
-    margin: 15px;
-    /*width: 40%;*/
+    margin: 15px auto;
+    width: 90%;
     height: 75vw;
     /*
     display: flex;
@@ -123,6 +123,15 @@
 .dot:hover {
     background-color: #717171;
 }
+.text-laboratorio {
+    /*margin-right: 5vw;*/
+    padding: 30px;
+    /*width: 40%;*/
+    text-align: justify;
+    display: flex;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 
 /**************** PAGE 2 - RESERVAS.HTML*********************/
@@ -174,8 +183,10 @@ div[class="grade-lab"]{
 
  /****************************************/
 /*                  IDs                 */
+
+div[id="edificios-container1"], div[id="edificios-container2"] { text-align: center; }
+div[id="hidraulica-container"], div[id="pavimentacao-container"] { margin-top: 2vh; }
+
 #b-aux-container { /*margin: auto;*/opacity: 0.7; font-size: var(--fontsz-x);}
-#div-container2{
-    padding-left: 0vh 2vw;
-}
+/*#div-container2{ padding-left: 0vh 2vw; }*/
 img[id="gradeAula"] { width: 100%; }
