--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -127,6 +127,7 @@
         div[id="pavimentacao-container"] { text-align: end; }
     }
 }
+/* QG001 -> Quebra Galho 001 */
 @media(max-width:  999px){ div[id="edificios-container1"]{ display: block; } div[id="edificios-container2"]{ display: none; } }
 @media(min-width: 1000px){ div[id="edificios-container1"]{ display: none; } div[id="edificios-container2"]{ display: block; } }
 
@@ -149,28 +150,28 @@
 
 
 
-
-
-
 /*********************** FOOTER.CSS ***********************/
 /*CONTEÚDO FINAL*/
 
 @media(min-width: 1200px){
-    .display-footer2 { display: flex; }/*acima de 1200px*/
+    .display-footer2 { /*display: flex;*/ }/*acima de 1200px*/
 }
 
-@media(min-width: 820px){/*#footer2 { padding-left: 20vw;}*/}
-@media(max-width: 848px){
+@media(min-width: 1150px){/*#footer2 { padding-left: 20vw;}*/
+    /*.display-footer2 { display: flex; }*/
+    /*@media(min-width: 850px){ .display-footer2{ display: flex; }}*/
+}
+@media(max-width: 1028px){
     /*#span-img-footer {display: flex;
         margin: 8vh 0vw;justify-content: center;
     }*/
     .display-footer { flex-direction: column; }
+    .h2-footer { margin-top: 8vh; } /*.p-footer { line-height: 22px; }*/
 
 }
 @media(min-width:849px){
-    .h2-footer{ margin-top: 5vh; }
     .display-footer{/*flex-direction: ;*/
-        margin: 2vh 2vw; justify-content: center;
+        margin: 2vh 0vw; justify-content: center;
     }
     
     .footer-col {/*margin-bottom: 5vh;*/
@@ -179,20 +180,51 @@
     /*.logo-fatec-footer { display: none; }*/
     
 }
+/* QG002 -> Quebra Galho 002 */
+@media(max-width: 1224.99px){/*posicionando textos DUPLICADOS no footer (Localização Fatec SP) */
+    div[id="footer-desenvolvedores1"]{ display: block; }
+    div[id="footer-desenvolvedores2"]{ display: none; }
+}
+@media(min-width: 1225px){ /*posicionando textos DUPLICADOS no footer (Localização Fatec SP) */
+    @media(max-width: 1800px){
+        div[id="footer-desenvolvedores1"]{ display: none; }
+        div[id="footer-desenvolvedores2"]{ display: block; }
+    }
+}
+@media(min-width: 1801px){ /*posicionando textos DUPLICADOS no footer (Localização Fatec SP) */
+    div[id="footer-desenvolvedores1"]{ display: none; }
+    div[id="footer-desenvolvedores2"]{ display: block; }
+    div[class="display-footer2"]{ display: flex; }
+}
+@media(min-width: 5000px){
+    div[class="display-footer3"]{ display: flex; }
+}
+
+
+/* IDEIAS:
+-PASSAR TEXTOS DUPLICADOS PARA JAVA SCRIPT
+-CRIAR UMA DIV PARA LOCALIZAÇÃO FATEC E DEPARTAMENTO DE EDIFICIOS PARA FICAREM NO MESMO QUADRADO
+-CRIAR UMA DIV PARA COORDENAÇÃO LAB CAD E DCC LABORATORIO PARA FICAREM NO MESMO QUADRADO
+-JUNTAR DESENVOLVEDORES COM A DIV DEPARTAMENTOS DE EDIFICIOS E LOCALIZAÇÃO FATEC
+
+TAREFAS:
+-CRIAR PÁGINA LINKS, DISCIPLINAS, CALENDARIO, PROFESSORES.
+-ORGANIZAR PÁGINA DE CONTATO
+*/
 /**------------------ CONFIGURAÇÕES DE RESOLUÇÃO ALTA ------------------**/
 @media(min-width: 850px){
     @media(max-width: 899px){#img-responsive { width: 70%; }}
     /*@media(max-width: 900px){#img-responsive { width: 60%; }}*/
     @media(min-width: 1200px){#img-responsive{ width: 50%; }}
-}@media(min-width: 1000px){ #banner-titulo { width: 23vw; justify-content: center; } }
+}@media(min-width: 1000px){ #banner-titulo { width: 23vw; justify-content: center; } .copy-right-footer { font-size: small; } }
 @media(min-width: 1200px){
-    @media(max-width: 1599px){#banner-titulo { font-size: large; }}
+    @media(max-width: 1599px){ #banner-titulo { font-size: large; } }
 }
 @media(min-width: 1600px ){
-    @media(max-width:1799px){#banner-titulo{ font-size: large; }
+    @media(max-width:1799px){#banner-titulo { font-size: large; }
                              .p-footer { font-size: large; }
     }
-}@media(max-width: 1799px){ p[class="p-footer"]{ line-height: 25px; } }
+}@media(max-width: 1799px){ p[class="p-footer"]{ line-height: 22px; } }
 @media(min-width: 1800px){
     @media(max-width: 2199px){
         /*banner*/
@@ -259,6 +291,7 @@
     /*footer*/
     .h2-footer { font-size: xxx-large; }
     .p-footer { font-size: xx-large; }
+    .copy-right-footer { font-size: medium; }
 }
 /*
 *Arroma media pro footer -largura de width margin
