--- a/styles/section.css
+++ b/styles/section.css
@@ -6,15 +6,16 @@
 .container-section {
     background-color: bisque;
     justify-content: center;
-    padding: 3vh 0vw;
+    padding: 6vh 0vw;
     display: grid;
 }
-.display-container { margin: 2vw; }
+.display-container { margin: 0vh 2vw; }
 .div-container {
-    margin: 2vh 4vw;
+    /*margin: 0vh auto 2vh auto;*/
+    margin: 0vh 4vw 2vh 4vh;
     /*margin-top: 3vh;*/
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+}.h2-section { margin-bottom: 2vh; }
 .div-container-auxiliares {
     text-align: center;
     /*display: inline-grid*/ 
@@ -158,6 +159,20 @@ button[id="btn-submit"] { width: 100%; padding: 20px; display: flex; justify-con
 
 /*#others[id=outhers]{ margin-left: 20px; width: 80%;} diferencia dos outros inputs*/
 #adendo-forms { font-size: small; color: tomato;}
+fieldset {
+    padding: 25px;
+}
+.atendimento-cad, input[type="text"] { /* pagina de atendimento */
+    width: 94%;
+    padding: 12px;
+    margin: 8px 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+textarea[id=mensagem]{ /* pagina de atendimento */
+    width: 93%;
+    padding: 15px;
+    font-size: large;
+}
 textarea[id="solicitacoes"] {
     width: 98%;
     height: 100px;
@@ -185,7 +200,7 @@ div[class="grade-lab"]{
 /*                  IDs                 */
 
 div[id="edificios-container1"], div[id="edificios-container2"] { text-align: center; }
-div[id="hidraulica-container"], div[id="pavimentacao-container"] { margin-top: 2vh; }
+/*div[id="hidraulica-container"], div[id="pavimentacao-container"] { margin-top: 2vh; }*/
 
 #b-aux-container { /*margin: auto;*/opacity: 0.7; font-size: var(--fontsz-x);}
 /*#div-container2{ padding-left: 0vh 2vw; }*/
