--- a/styles/section.css
+++ b/styles/section.css
@@ -3,6 +3,9 @@
 .section-center {/*TAG: section*/
     display: flex; flex-direction: column; width: 70%; margin: auto;
 }
+.section-center-calendario {
+    width: 99%;
+}
 .container-section {
     background-color: bisque;
     justify-content: center;
@@ -16,6 +19,7 @@
     /*margin-top: 3vh;*/
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }.h2-section { margin-bottom: 2vh; }
+
 .div-container-auxiliares {
     text-align: center;
     /*display: inline-grid*/ 
@@ -205,3 +209,21 @@ div[id="edificios-container1"], div[id="edificios-container2"] { text-align: cen
 #b-aux-container { /*margin: auto;*/opacity: 0.7; font-size: var(--fontsz-x);}
 /*#div-container2{ padding-left: 0vh 2vw; }*/
 img[id="gradeAula"] { width: 100%; }
+
+
+/*   -->   IDs CALENDÁRIO SEMESTRE   -->   */
+#h2-calendario-semestre {
+    color:chocolate;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 20px 5px 20px 5px;
+    text-align: center;
+}
+#p-calendario-semestre {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 20px 5px 20px 5px;
+}
+#img-calendario-semestre {
+    width: 100%;
+}
+
+/*   <--   fim IDs Calendário   <--   */
